snapshots/com/wadpam/openserver/errors/maven-metadata.xml.sha1
be1df9570116af10d235966e37b6e8b093011473